Working admin panel, kinda

--- a/web.config
+++ b/web.config
@@ -7,5 +7,12 @@
                 <add name="X-Powered-By" value="Team2 is da best" />
             </customHeaders>
         </httpProtocol>
+        <security>
+            <requestFiltering>
+                <hiddenSegments>
+                    <add segment=".git" />
+                </hiddenSegments>
+            </requestFiltering>
+        </security>
     </system.webServer>
 </configuration>
