Fixed admin panel; can delete types

--- a/web.config
+++ b/web.config
@@ -11,6 +11,7 @@
             <requestFiltering>
                 <hiddenSegments>
                     <add segment=".git" />
+                    <add segment="unit_test" />
                 </hiddenSegments>
             </requestFiltering>
         </security>
